fixed spacing issues

--- a/less/index.less
+++ b/less/index.less
@@ -188,6 +188,9 @@ h2{
 
 .contact{
 	.bubble(lightgray, column, center, 25px, 100%);
+	h1{
+		margin-bottom: 20px;
+	}
 	.text{
 		display: flex;
 		flex-direction: column;
@@ -211,5 +214,12 @@ h2{
 	.icons{
 		display: flex;
 		justify-content: space-around;
+		a {
+			display: flex;
+			justify-content: center;
+		}
+		img {
+			width: 50%;
+		}
 	}
 }
